Fixes mobile table headings spacing

--- a/src/styles/components/Table.scss
+++ b/src/styles/components/Table.scss
@@ -53,7 +53,7 @@
 
     @include mobile-only {
       th {
-        height: 120px;
+        height: 135px;
         white-space: nowrap;
 
         > div {
